docs: delete account handler
