# api/internal/handlers/accounts.go
@@ -79,7 +79,7 @@ func EditAccount(c *gin.Context, userId string) (any, error) {
 //	@Accept			json
 //	@Produce		json
 //	@ID				deleteAccount
-//	@Param			accountId	path		string	true	"Account ID"
+//	@Param			accountId	path	string	true	"Account ID"
 //	@Success		204			"No Content"
 //	@Failure		401			{object}	ErrorResponse	"Unauthorized"
 //	@Failure		404			{object}	ErrorResponse	"Not Found"
